Replace IOUtils, part 2 #1098
Task-Url: https://github.com/eclipse-mylyn/org.eclipse.mylyn/issues/1098